--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,17 @@
 body {
     position: relative;
     background-color: #325068;
+    font-family: Helvetica, Times, sans-serif;
+    color: #333;
+}
+
+h1, h2, dt {
+    color: #325068;
+    font-family: Georgia, serif;
 }
 
 body #page {
     background: white;
-    color: #333;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
@@ -112,19 +118,6 @@ ul.team li {
     }
 }
 
-h1, h2, dt {
-    color: #325068;
-    font-family: Palatino Georgia serif;
-}
-
-p, div, dd, li {
-    font-family: Helvetica sans-serif;
-    color: #333;
-}
-
-a {
-    font-family: Helvetica sans-serif;
-}
 
 h1 img {
     height: 1em;
