--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -6,6 +6,7 @@
  * Corrects `block` display not defined in IE 8/9.
  */
 @import url("https://fonts.googleapis.com/css?family=Arimo:400,700");
+@import url("https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,500");
 article,
 aside,
 details,
@@ -3673,6 +3674,16 @@ a.text-dark:focus, a.text-dark:hover {
   background-image: linear-gradient(-180deg, #BBBBBB, #bbbbbb);
   background-repeat: repeat-x; }
 
+.color-em {
+  color: #000000 !important; }
+
+.bg-em {
+  background-color: #000000 !important; }
+
+.bg-gradient--em {
+  background-image: linear-gradient(-180deg, #000000, black);
+  background-repeat: repeat-x; }
+
 body {
   background: #282828;
   font-family: "Arimo", sans-serif;
@@ -3689,16 +3700,18 @@ body {
     padding-top: 180px; } }
 .button {
   display: inline-block;
-  text-transform: uppercase;
+  text-transform: lowercase;
+  font-family: "Barlow Semi Condensed", sans-serif;
   padding: 10px 30px;
   border: 2px solid #FFFFFF;
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 500;
+  border-radius: 4px;
   background: none;
   transition: all 0.1s; }
 
 .button:hover {
-  transform: translateY(5px); }
+  transform: translateY(3px); }
 
 .button--small {
   padding: 5px 15px; }
@@ -3710,8 +3723,7 @@ body {
 
 .button--light {
   border-color: #FFFFFF;
-  color: #FFFFFF;
-  background: #555555; }
+  color: #FFFFFF; }
 
 .h100 {
   height: 100%; }
@@ -3722,16 +3734,29 @@ body {
   padding: 30px 0; }
 
 .main-header__link {
+  font-family: "Barlow Semi Condensed", sans-serif;
+  text-transform: lowercase;
   display: inline-block;
   color: #FFFFFF;
   text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 600;
-  border-bottom: 2px dotted;
-  transition: all 0.1s; }
+  line-height: 1.2;
+  font-weight: 400;
+  font-size: 20px;
+  position: relative; }
 
-.main-header__link:hover {
-  transform: translateY(5px); }
+.main-header__link:after {
+  position: absolute;
+  content: "";
+  background: #FFFFFF;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  transition: all 0.1s;
+  border-radius: 3px; }
+
+.main-header__link:hover:after {
+  transform: translateY(3px); }
 
 .main-header__link:not(:last-child) {
   margin-right: 30px; }
@@ -3742,8 +3767,7 @@ body {
     top: 0;
     right: 0;
     left: 0;
-    z-index: 100;
-    padding: 60px 0; } }
+    z-index: 100; } }
 .hero {
   background: #282828;
   background: linear-gradient(#282828, #1b1b1b);
@@ -3761,19 +3785,41 @@ body {
 
 .heading {
   display: inline-block;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 1;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-size: 28px;
+  line-height: 0.7;
+  font-weight: 400;
   margin-top: 0;
   margin-bottom: 60px;
   padding-bottom: 5px;
-  border-bottom: 2px dotted; }
+  text-transform: lowercase;
+  position: relative; }
+
+.heading--cap {
+  text-transform: none; }
+
+.heading:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  bottom: -2px;
+  height: 3px;
+  background: #FFFFFF;
+  border-radius: 4px; }
+
+.heading.color-em:after {
+  background: #000000; }
 
 .heading--s {
-  font-size: 18px;
+  font-size: 22px;
+  font-weight: 500;
   border-bottom: none;
   margin-bottom: 15px; }
+
+.heading--s:after {
+  content: none; }
 
 .paragraph {
   margin-top: 0;
@@ -3813,7 +3859,7 @@ hr,
   transition: all 1s;
   height: 100%;
   position: relative;
-  margin-bottom: 5px; }
+  margin-bottom: 8px; }
 
 .carousel__item {
   width: 100%;
@@ -3839,8 +3885,9 @@ hr,
   justify-content: center; }
 
 .carousel__page {
-  width: 15px;
-  height: 15px;
+  width: 12px;
+  height: 12px;
+  border-radius: 2px;
   background: #FFFFFF;
   margin-right: 5px;
   cursor: pointer; }
@@ -3853,8 +3900,9 @@ hr,
 
 .teammember__image {
   margin-bottom: 15px;
-  padding-bottom: 2px;
-  border-bottom: 12px solid #282828; }
+  padding-bottom: 3px;
+  border-bottom: 6px solid #282828;
+  border-radius: 3px; }
 
 .space-b0 {
   margin-bottom: 0 !important; }
@@ -3870,11 +3918,12 @@ hr,
 
 .portfolio__image {
   margin-bottom: 15px;
-  border-bottom: 12px solid #FFFFFF;
-  padding-bottom: 2px; }
+  border-bottom: 6px solid #FFFFFF;
+  padding-bottom: 3px;
+  border-radius: 3px; }
 
 .portfolio__image--dark {
-  border-color: #282828; }
+  border-bottom-color: #282828; }
 
 .portfolio__text {
   height: 250px; }
@@ -3890,18 +3939,21 @@ hr,
   border: 2px solid #818181;
   width: 100%;
   margin-bottom: 30px;
+  border-radius: 2px;
   padding: 15px; }
 
 .textarea {
   display: block;
   border: 2px solid #818181;
   width: 100%;
+  border-radius: 2px;
   height: 180px;
   margin-bottom: 30px;
   padding: 15px; }
 
 .contact--dark {
-  background: #d9d9d9;
+  background: #e6e6e6;
+  border-radius: 2px;
   padding: 30px; }
 
 .link {
@@ -3915,5 +3967,4 @@ hr,
   transform: translateY(5px); }
 
 .logo {
-  width: 100%;
-  max-width: 348px; }
+  height: 110.5px; }
