--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -3684,6 +3684,26 @@ a.text-dark:focus, a.text-dark:hover {
   background-image: linear-gradient(-180deg, #000000, black);
   background-repeat: repeat-x; }
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url("https://fonts.gstatic.com/s/materialicons/v34/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2") format("woff2"); }
+.icon {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -moz-font-feature-settings: "liga";
+  -moz-osx-font-smoothing: grayscale; }
+
 body {
   background: #282828;
   font-family: "Arimo", sans-serif;
@@ -3865,11 +3885,8 @@ hr,
   width: 100%;
   height: 100%;
   padding: 60px;
-  background: #FFFFFF;
-  background-position: 50% 50%;
-  background-size: cover;
   position: relative;
-  border-bottom: 15px solid #FFFFFF; }
+  border-bottom: 6px solid #FFFFFF; }
 
 .carousel__item__description {
   display: block;
@@ -3877,7 +3894,25 @@ hr,
   width: 300px;
   position: absolute;
   color: #555555;
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   background: #FFFFFF; }
+
+.carousel__item__image {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 2px;
+  background: #FFFFFF;
+  background-position: 50% 50%;
+  background-size: cover;
+  transition: all 1s;
+  filter: none; }
+
+.carousel__item--active .carousel__item__image {
+  animation: fade-in 2s linear forwards; }
 
 .carousel__pages {
   display: flex;
@@ -3895,14 +3930,33 @@ hr,
 .carousel__page--active {
   background: #a6a6a6; }
 
+@keyframes fade-in {
+  0% {
+    filter: blur(8px); }
+  100% {
+    filter: blur(0px); } }
 .strong {
   font-weight: 600; }
 
 .teammember__image {
-  margin-bottom: 15px;
+  margin-bottom: 23px;
   padding-bottom: 3px;
-  border-bottom: 6px solid #282828;
-  border-radius: 3px; }
+  position: relative;
+  width: 100%;
+  background-position: 50% 50%;
+  background-size: cover;
+  height: 200px;
+  border-radius: 3px 3px 0px 0px; }
+
+.teammember__image:after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  height: 6px;
+  left: 0;
+  right: 0;
+  background: #282828;
+  border-radius: 0px 0px 3px 3px; }
 
 .space-b0 {
   margin-bottom: 0 !important; }
@@ -3917,16 +3971,27 @@ hr,
   margin-bottom: 30px !important; }
 
 .portfolio__image {
-  margin-bottom: 15px;
-  border-bottom: 6px solid #FFFFFF;
+  margin-bottom: 23px;
   padding-bottom: 3px;
-  border-radius: 3px; }
+  width: 100%;
+  height: 225px;
+  background-position: 50% 50%;
+  background-size: cover;
+  position: relative;
+  border-radius: 3px 3px 0px 0px; }
 
-.portfolio__image--dark {
-  border-bottom-color: #282828; }
+.portfolio__image:after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  height: 6px;
+  left: 0;
+  right: 0;
+  background: #FFFFFF;
+  border-radius: 0px 0px 3px 3px; }
 
-.portfolio__text {
-  height: 250px; }
+.portfolio__image--dark:after {
+  background: #282828; }
 
 .tag {
   border: 1px solid #4e4e4e;
@@ -3935,16 +4000,42 @@ hr,
   margin: 7px; }
 
 .textfield {
+  position: relative; }
+
+.textfield--email:after {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -moz-font-feature-settings: "liga";
+  -moz-osx-font-smoothing: grayscale;
+  content: "email";
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%); }
+
+.textfield__input {
   display: block;
-  border: 2px solid #818181;
+  border: 1px solid #818181;
   width: 100%;
   margin-bottom: 30px;
   border-radius: 2px;
   padding: 15px; }
 
+.textfield--email .textfield__input {
+  padding-right: 60px; }
+
 .textarea {
   display: block;
-  border: 2px solid #818181;
+  border: 1px solid #818181;
   width: 100%;
   border-radius: 2px;
   height: 180px;
@@ -3952,7 +4043,8 @@ hr,
   padding: 15px; }
 
 .contact--dark {
-  background: #e6e6e6;
+  background: #f2f2f2;
+  border: 1px #282828 dashed;
   border-radius: 2px;
   padding: 30px; }
 
@@ -3960,11 +4052,25 @@ hr,
   display: inline-block;
   text-decoration: none;
   color: #282828;
-  border-bottom: 2px dotted;
-  transition: all 0.1s; }
+  position: relative; }
 
-.link:hover {
-  transform: translateY(5px); }
+.link:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 2px;
+  transition: all 0.1s;
+  bottom: 3px;
+  border-radius: 3px;
+  background: #282828; }
+
+.link:hover:after {
+  transform: translateY(3px); }
 
 .logo {
   height: 110.5px; }
+
+.footer-logo {
+  opacity: 0.4; }
